After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731234 - manager: finish off active displays when closing down
manager: finish off active displays when closing down
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-04 19:06 UTC by Ray Strode [halfline]
Modified: 2014-07-09 15:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
manager: finish off active displays when closing down (5.20 KB, patch)
2014-06-04 19:06 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2014-06-04 19:06:41 UTC
(untested patch, will test tomorrow)
Comment 1 Ray Strode [halfline] 2014-06-04 19:06:43 UTC
Created attachment 277899 [details] [review]
manager: finish off active displays when closing down

If the daemon is killed while sitting a the log in screen,
we never actually unmanage the display, and instead die
of an assertion failure in gdm_display_dispose.

This commit makes sure the X server is killed off properly.
Comment 2 Rui Matos 2014-07-09 13:57:29 UTC
I just tested this and it seems to work, i.e. the X server now logs a successful termination.

But there's still something wrong because I still can't switch VTs with Alt+F? after stopping the gdm service.
Comment 3 Ray Strode [halfline] 2014-07-09 14:31:43 UTC
Attachment 277899 [details] pushed as ebbf2be - manager: finish off active displays when closing down

Okay, let's push this for now, the remaining issue is probably not related to GDM, and
we can hopefully figure it out on irc.
Comment 4 Rui Matos 2014-07-09 15:45:54 UTC
For the record this did indeed fix the issue. When I said that it was still not working was because I had booted with the non-patched GDM, meaning that when I stopped that instance, the X server wasn't able to reset the console and it remained in K_OFF mode. This meant that even though I restarted the fixed GDM several times after, the X server was always resetting the console to the mode it found it on initially which was K_OFF...

Rebooting with the fixed GDM did completely fix things.