manager: finish off active displays when closing down

If the daemon is killed while sitting a the log in screen,
we never actually unmanage the display, and instead die
of an assertion failure in gdm_display_dispose.

This commit makes sure the X server is killed off properly.

https://bugzilla.gnome.org/show_bug.cgi?id=731234